# term-dock

./: .env.example  .gitignore  AGENTS.md  LICENSE  PRD.md  README.md  RESEARCH.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  pages.yml
apps/desktop/: index.html  package.json  playwright.config.ts  vite.config.ts
apps/desktop/e2e/: terminal.spec.ts
apps/desktop/src/: App.test.tsx  App.tsx  TerminalPane.tsx  api.ts  deepLink.test.ts  deepLink.ts  main.tsx  notifications.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/test/: setup.ts
apps/web/: index.html  package.json
apps/web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/web/src/test/: setup.ts
docs/: AI.md  ARCHITECTURE.md  PROTOCOL.md
docs/site/: index.html  styles.css
