[package]
name = "term-dock"
version = "0.1.0"
description = "Durable, local-first terminal workspaces"
authors = ["Term Dock contributors"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "term_dock_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
subtle = "2.6"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2.3.3"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
